package com.demirsoft.micro1.payment.grpc;

service GrpcPaymentService {
    rpc charge(GrpcPaymentRequest) returns (GrpcPaymentResponse) {}
    rpc rollback(GrpcPaymentRequest) returns (GrpcPaymentRollbackResponse) {}
  }
  
  message GrpcPaymentRequest {
    required int32 orderId = 1;
    required int32 userId = 2;
    required int32 productId = 3;
    required int32 productCount = 4;
    required double price = 5;
  }
  
  enum GrpcPaymentStatus {
    PAYMENT_COMPLETED = 1;
    PAYMENT_CANCELLED = 2;
  }

  message GrpcPaymentResponse {
    required int32 orderId = 1;
    required int32 userId = 2;
    required int32 productId = 3;
    required int32 productCount = 4;
    required double totalPrice = 5;
    required GrpcPaymentStatus paymentStatus = 6;
  }

  enum GrpcPaymentRollbackStatus {
    ROLLBACK_COMPLETED = 1;
    ROLLBACK_FAILED = 2;
  }

  message GrpcPaymentRollbackResponse {
    required int32 orderId = 1;
    required int32 userId = 2;
    required int32 productId = 3;
    required int32 productCount = 4;
    required double totalPrice = 5;
    required GrpcPaymentRollbackStatus rollbackStatus = 6;
  }